--- a/Login.html
+++ b/Login.html
@@ -29,6 +29,9 @@
 		
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item active">
+                	<a class="nav-link" href="home.html">Home</a>
+            	    </li>
+		    <li class="nav-item active">
 			<a class="nav-link" href="Login.html">Login</a>
 		    </li>
 		    <li class="nav-item">
