--- a/register.html
+++ b/register.html
@@ -30,6 +30,9 @@
 
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item">
+                	<a class="nav-link" href="home.html">Home</a>
+            	    </li>
+		    <li class="nav-item">
 			<a class="nav-link" href="Login.html">Login</a>
 		    </li>
 		    <li class="nav-item active">
