--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 	  
 	 <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="banner.png" width="275px" height="auto" alt="">
+		<img src="images/banner.png" width="275px" height="auto" alt="">
 		
         <ul class="navbar-nav ml-auto">
 			<li class="nav-item active">
