new session page JS

--- a/sessionNew.html
+++ b/sessionNew.html
@@ -22,6 +22,10 @@
 	 <link href="https://fonts.googleapis.com/css?family=Barlow:400,500" rel="stylesheet">
 	 <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	 
+	 <!-- Scripts -->
+	 <script src="http://cop4331-2.com/scripts/sessionNew.js"></script>
+	 <script src="http://cop4331-2.com/scripts/main.js"></script>
+
   </head>
 	
 	
