changed polling feature text

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						Interactive polling system
 					</div>
 					<div class = "feature-text">
-						Create a class with the press of a button. Students can instantly join the class that you create using the given class code.
+						Turn questions that students ask into an interactive poll at the click of a button. Display poll results with a real-time, easy-to-read chart right on your screen.
 					</div>
 				</div>
 			</div>
