--- a/Login.html
+++ b/Login.html
@@ -29,7 +29,7 @@
 		
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item">
-                	<a class="nav-link" href="home.html">Home</a>
+                	<a class="nav-link" href="http://cop4331-2.com">Home</a>
             	    </li>
 		    <li class="nav-item active">
 			<a class="nav-link" href="Login.html">Login</a>
