added create poll buttons

--- a/sessionNew.html
+++ b/sessionNew.html
@@ -108,6 +108,7 @@
 									  </button>
 									  <div class="dropdown-menu">
 										<button class="dropdown-item" data-toggle="modal" data-target="#displayQuestionModal">Display</button>
+										<button class="dropdown-item" data-toggle="modal" data-target="#createPollQuestionModal">Create Poll</button>
 										<button class="dropdown-item" data-toggle="modal" data-target="#displayStudentModal">View Student</button>
 										<button class="dropdown-item" data-toggle="modal" data-target="#deleteQuestionModal">Delete</button>
 									  </div>
@@ -136,6 +137,7 @@
 									  </button>
 									  <div class="dropdown-menu">
 										<button class="dropdown-item" data-toggle="modal" data-target="#displayQuestionModal">Display</button>
+										<button class="dropdown-item" data-toggle="modal" data-target="#createPollQuestionModal">Create Poll</button>
 										<button class="dropdown-item" data-toggle="modal" data-target="#displayStudentModal">View Student</button>
 										<button class="dropdown-item" data-toggle="modal" data-target="#deleteQuestionModal">Delete</button>
 									  </div>
@@ -163,7 +165,8 @@
 					<!-- Polls Tab -->
 					<div class="tab-pane fade" id="nav-polls" role="tabpanel">
 						<div class="polls-header">
-							Active Polls
+							<p>Active Polls</p>
+							<button class="btn-add" data-toggle="modal" data-target="#createPollBlankModal"></button>
 						</div>
 						<div class="overhead-container-polls">
 							
