Display question modal

--- a/sessionNew.html
+++ b/sessionNew.html
@@ -299,7 +299,7 @@
 	<!-- Display poll modal-->
 	<div class="modal fade" id="displayPollModal" tabindex="-1" role="dialog">
 		<div class="modal-dialog modal-full" role="document">
-			<div class="modal-content">
+			<div class="modal-content" id="displayModal">
 					
 				<div class="modal-header">
 					<h5 class="modal-title"></h5>
