--- a/sessionNew.html
+++ b/sessionNew.html
@@ -400,7 +400,7 @@
 
 					<div class="modal-header">
 						<h5 class="modal-title">Are you sure?</h5>
-						<button type="button" class="close" data-dismiss="modal">
+						<button type="button" class="close" data-dismiss="modal" onclick="setEndTarget(-1);">
 						  <span>&times;</span>
 						</button>
 					</div>
@@ -410,8 +410,8 @@
 					</div>
 
 					<div class="modal-footer">
-						<button type="button" class="btn btn-modal-black" data-dismiss="modal">No</button>
-						<button type="button" class="btn btn-modal-green">Yes</button>
+						<button type="button" class="btn btn-modal-black" data-dismiss="modal" onclick="setEndTarget(-1);">No</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal">Yes</button>
 					</div>
 
 				</div>
