connect endPoll button

--- a/sessionNew.html
+++ b/sessionNew.html
@@ -411,7 +411,7 @@
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-modal-black" data-dismiss="modal" onclick="setEndTarget(-1);">No</button>
-						<button type="button" class="btn btn-modal-green" data-dismiss="modal">Yes</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="endPoll()">Yes</button>
 					</div>
 
 				</div>
