--- a/sessionNew.html
+++ b/sessionNew.html
@@ -375,7 +375,7 @@
 
 					<div class="modal-header">
 						<h5 class="modal-title">Are you sure?</h5>
-						<button type="button" class="close" data-dismiss="modal">
+						<button type="button" class="close" data-dismiss="modal" onclick="setDeletePollTarget(-1);">
 						  <span>&times;</span>
 						</button>
 					</div>
@@ -385,8 +385,8 @@
 					</div>
 
 					<div class="modal-footer">
-						<button type="button" class="btn btn-modal-black" data-dismiss="modal">No</button>
-						<button type="button" class="btn btn-modal-green">Yes</button>
+						<button type="button" class="btn btn-modal-black" data-dismiss="modal" onclick="setDeletePollTarget(-1);">No</button>
+						<button type="button" class="btn btn-modal-green" onclick="deletePoll()">Yes</button>
 					</div>
 
 				</div>
