--- a/sessionNew.html
+++ b/sessionNew.html
@@ -386,7 +386,7 @@
 
 					<div class="modal-footer">
 						<button type="button" class="btn btn-modal-black" data-dismiss="modal" onclick="setDeletePollTarget(-1);">No</button>
-						<button type="button" class="btn btn-modal-green" onclick="deletePoll()">Yes</button>
+						<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="deletePoll()">Yes</button>
 					</div>
 
 				</div>
