--- a/sessionNew.html
+++ b/sessionNew.html
@@ -520,7 +520,7 @@
 					
 				<div class="modal-footer">
 					<button type="button" class="btn btn-modal-black" data-dismiss="modal">Cancel</button>
-					<button type="button" class="btn btn-modal-green">Create</button>
+					<button type="button" class="btn btn-modal-green" data-dismiss="modal" onclick="addPoll()">Create</button>
 				</div>
 					
 			</div>
