--- a/session.html
+++ b/session.html
@@ -34,31 +34,26 @@
 	  
 	 <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="banner.png" width="275px" height="auto" alt="">
+		<img src="images/banner.png" width="275px" height="auto" alt="">
 		
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">My Classes</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">My Account</a>
+                <a class="nav-link" href="myClasses.html">My Classes</a>
             </li>
 			<li class="nav-item">
-                <a class="nav-link" href="#">Log Out</a>
+                <a class="nav-link" href="#" onclick="logout()">Log Out</a>
             </li>
         </ul>
-	 </nav>
+			</nav>
 	  
-	  
-	
-	  <div class="class-title-bar">
-		  <p class= "class-title">Class Title</p>
-		  <p class="class-id">Class ID: 12345</p>
-		  <div class= "btn-container">
-		  	<button type="button" class="btn-utility" href="#">Class Home</button>
-		    <button type="button" class="btn-utility">Student List</button>
-		  </div>  
-	  </div>
+	 <div class="class-title-bar">
+		<p class= "class-title"></p>
+		<p class="class-id"></p>
+		<div class= "btn-container">
+			<a href="Class.html"><button type="button" class="btn-utility">Class Home</button></a>
+		<a href="students.html"><button type="button" class="btn-utility">Student List</button></a>
+		</div>  
+	</div>
 	 
 	  	<!-- Tabs -->
 
