Chart modal show question

--- a/session.html
+++ b/session.html
@@ -249,7 +249,7 @@
 	  <!-- Display results modal -->
 		<div class="modal fade" id="viewResultsModal" tabindex="-1" role="dialog">
 			<div class="modal-dialog modal-display" role="document">
-				<div class="modal-content">
+				<div class="modal-content" id="resultsModal">
 
 					<div class="modal-header">
 						<h5 class="modal-title"></h5>
