--- a/Class.html
+++ b/Class.html
@@ -77,7 +77,7 @@
 				<h1>Session Archive</h1>
 				<!-- Sorting selector -->
 				<p>Sort by:</p>
-				<select>
+				<select id="sort-select">
 					<option value="newestFirst">Newest First</option>
 					<option value="oldestFirst">Oldest First</option>
 				</select>
