--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class = "feature-row">
 				<div class = "feature-body">
 					<div class = "feature-title">
-						Streamlined queueing system
+						Streamlined queuing system
 					</div>
 					<div class = "feature-text">
 						Make sessions in which students can submit their questions. These questions will be sent directly to your screen where you can sort through them and answer when you see fit.
