--- a/Class.html
+++ b/Class.html
@@ -63,7 +63,7 @@
 		  <div class="session-header">
 			  <h1>Active Sessions</h1>
 			  <!-- New session button -->
-			  <button type="button" class="btn-new-session" data-toggle="modal" data-target="#newSessionModal">Create new session</button>  
+			  <button type="button" class="btn-new-session" data-toggle="modal" data-target="#newSessionModal"></button>  
 		  </div>
 		  <div class="session-container">
 			  
