--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	  
 	 <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="images/banner.png" width="275px" height="auto" alt="">
+		 <a href="#"><img src="images/banner.png" width="275px" height="auto" alt=""></a>
 		
         <ul class="navbar-nav ml-auto">
 			<li class="nav-item active">
