--- a/Login.html
+++ b/Login.html
@@ -25,7 +25,7 @@
   <body>
 	 <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="images/banner.png" width="275px" height="auto" alt="">
+		<a href="http://cop4331-2.com"><img src="images/banner.png" width="275px" height="auto" alt=""></a>
 		
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item">
