--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
 	  
 	  <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="images/banner.png" width="275px" height="auto" alt="">
+		<a href="http://cop4331-2.com"><img src="images/banner.png" width="275px" height="auto" alt=""></a>
 
 		<ul class="navbar-nav ml-auto">
 		    <li class="nav-item">
