Add link to logo

--- a/Class.html
+++ b/Class.html
@@ -32,7 +32,7 @@
 	  
 	 <!-- NAVBAR  -->
 	 <nav class="navbar navbar-expand-sm navbar-default">
-		<img src="images/banner.png" width="275px" height="auto" alt="">
+		<a href="myClasses.html"><img src="images/banner.png" width="275px" height="auto" alt=""></a>
 		
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
