fixed register button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class = "info-column-title">Website for professors</div>
 					<div class = "info-columns-text">Access all features including the question queue and polling system </div>
 					
-					<button type="button" class="btn btn-outline-success" href="register.html">Register Now</button>
+					<a href="register.html"><button type="button" class="btn btn-outline-success">Register Now</button></a>
 				</div>
 				
 				<div class="info-column">
