--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<div class = "info-column-title">App for students</div>
 					<div class = "info-columns-text">Access the ability to ask questions in class and answer polls created by your professor </div>
 					
-					<button type="button" class="btn-android" href="#"></button>
+					<a href="http://cop4331-2.com/APK/app-debug.apk"><button type="button" class="btn-android"></button></a>
 				</div>
 			</div>
 			
